[gd_scene load_steps=8 format=3 uid="uid://bpmceytvqnc7d"]

[ext_resource type="Script" path="res://assets/scripts/ui/interactive/construct/construct.gd" id="1_mol3v"]
[ext_resource type="PackedScene" uid="uid://cps3s5crjjsv1" path="res://assets/nodes/ui/interactive/construct/blueprint.tscn" id="2_qs4o7"]
[ext_resource type="Script" path="res://assets/scripts/ui/interactive/construct/crafting.gd" id="3_v0d02"]

[sub_resource type="Animation" id="Animation_bduf1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1drgd"]
resource_name = "close"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_window"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reset_data"
}]
}

[sub_resource type="Animation" id="Animation_p55vt"]
resource_name = "open"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"check_window"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k6ua4"]
_data = {
"RESET": SubResource("Animation_bduf1"),
"close": SubResource("Animation_1drgd"),
"open": SubResource("Animation_p55vt")
}

[node name="Crafting" type="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mol3v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -184.0
offset_right = 320.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 309.0
offset_top = 16.0
offset_right = 624.0
offset_bottom = 368.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.0416667
anchor_right = 0.975
anchor_bottom = 0.958333
offset_left = 1.0
offset_top = -1.33514e-05
offset_bottom = 0.00012207
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Items" type="ScrollContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/Items"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2

[node name="Item_BuildingMenu" parent="Panel/HBoxContainer/Items/GridContainer" instance=ExtResource("2_qs4o7")]
layout_mode = 2

[node name="Info" type="ScrollContainer" parent="Panel/HBoxContainer"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2
size_flags_horizontal = 10
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/Info"]
custom_minimum_size = Vector2(315, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="Caption" type="MarginContainer" parent="Panel/HBoxContainer/Info/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ObjectCaption" type="Label" parent="Panel/HBoxContainer/Info/VBoxContainer/Caption"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "blueprint.caption"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Description" type="MarginContainer" parent="Panel/HBoxContainer/Info/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="ObjectDescription" type="Label" parent="Panel/HBoxContainer/Info/VBoxContainer/Description"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "blueprint.description"
vertical_alignment = 1
autowrap_mode = 3

[node name="Resources" type="MarginContainer" parent="Panel/HBoxContainer/Info/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ObjectResources" type="Label" parent="Panel/HBoxContainer/Info/VBoxContainer/Resources"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "blueprint.resources"
vertical_alignment = 1
autowrap_mode = 3

[node name="Time" type="MarginContainer" parent="Panel/HBoxContainer/Info/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="ObjectCreationTime" type="Label" parent="Panel/HBoxContainer/Info/VBoxContainer/Time"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "blueprint.creation_time"
vertical_alignment = 2

[node name="Button" type="MarginContainer" parent="Panel/HBoxContainer/Info/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 25

[node name="Craft" type="Button" parent="Panel/HBoxContainer/Info/VBoxContainer/Button"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 4
text = "construct.create"
script = ExtResource("3_v0d02")

[node name="Button" type="Button" parent="Panel"]
layout_mode = 0
anchor_left = 0.975
anchor_top = -0.0416667
anchor_right = 1.025
anchor_bottom = 0.0416667
text = "X"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k6ua4")
}

[connection signal="pressed" from="Panel/HBoxContainer/Info/VBoxContainer/Button/Craft" to="Panel/HBoxContainer/Info/VBoxContainer/Button/Craft" method="_on_pressed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_button_pressed"]
